[package]
name = "co2"
version = "0.1.0"
authors = ["max <mx.sht06@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num = { version = "0.4", features = ["std", "rand", "num-bigint", "serde"] }
digest = "0.10"
rand = { version = "0.8", features = ["small_rng"] }
blake3 = { version = "1.3", features = ["traits-preview"] }
lazy_static = "1.4"
